@@ -54,6 +54,7 @@ capplets/network/gnome-network-preferences.glade
 capplets/sound/gnome-settings-sound.desktop.in.in
 capplets/sound/sound-properties-capplet.c
 capplets/sound/sound-properties.glade
+capplets/sound/pipeline-tests.c
 capplets/theme-switcher/gnome-theme-details.c
 capplets/theme-switcher/gnome-theme-installer.c
 capplets/theme-switcher/gnome-theme-manager.c
@@ -66,6 +67,12 @@ capplets/ui-properties/gnome-ui-properties.glade
 capplets/windows/gnome-window-properties.c
 capplets/windows/gnome-window-properties.glade
 capplets/windows/window-properties.desktop.in.in
+libgswitchit/gnome-kbd-indicator-test.c
+libgswitchit/gswitchit-config.c
+libgswitchit/gswitchit-plugins-add.c
+libgswitchit/gswitchit-plugins-app.c
+libgswitchit/gswitchit-plugins.desktop.in.in
+libgswitchit/gswitchit-plugins.glade
 gnome-settings-daemon/actions/acme.glade
 gnome-settings-daemon/factory.c
 gnome-settings-daemon/gnome-settings-accessibility-keyboard.c
