@@ -2,6 +2,12 @@ archiver/archive.c
 archiver/config-archiver.c
 archiver/location.c
 archiver/main.c
+capplets/about-me/gnome-about-me.desktop.in
+capplets/accessibility/at-properties/at-properties.desktop.in
+capplets/accessibility/keyboard/accessibility-keyboard.desktop.in
+capplets/background/background.desktop.in
+capplets/default-applications/default-applications.desktop.in
+capplets/display/display-properties.desktop.in
 capplets/file-types/file-types-capplet.c
 capplets/file-types/file-types-icon-entry.c
 capplets/file-types/file-types-capplet.desktop.in.in
@@ -13,6 +19,9 @@ capplets/file-types/mime-type-info.c
 capplets/file-types/mime-types-model.c
 capplets/file-types/service-edit-dialog.c
 capplets/file-types/service-info.c
+capplets/font/font-properties.desktop.in
+capplets/keybindings/keybinding.desktop.in
+capplets/keyboard/keyboard.desktop.in
 capplets/localization/gnome-localization-properties.c
 capplets/localization/gnome-localization-properties.glade
 capplets/localization/localization.desktop.in.in
@@ -22,20 +31,34 @@ capplets/mime-type/mime-info.c
 capplets/mime-type/mime-type-capplet.c
 capplets/mime-type/mime-type.desktop.in.in
 capplets/mime-type/new-mime-window.c
+capplets/mouse/gnome-settings-mouse.desktop.in
+capplets/network/gnome-network-preferences.desktop.in
 capplets/rollback/main.c
 capplets/rollback/rollback-capplet-dialog.c
 capplets/rollback/rollback.desktop.in.in
+capplets/sound/gnome-settings-sound.desktop.in
+capplets/theme-switcher/gtk-theme-selector.desktop.in
+capplets/ui-properties/gnome-ui-properties.desktop.in
 capplets/url-properties/url-properties.c
 capplets/url-properties/url-properties.desktop.in.in
 capplets/url-properties/url.desktop.in.in
+capplets/windows/window-properties.desktop.in
 capplets/wm-properties/wm-desktops/Enlightenment.desktop.in.in
 capplets/wm-properties/wm-desktops/IceWM.desktop.in.in
 capplets/wm-properties/wm-desktops/Scwm.desktop.in.in
 capplets/wm-properties/wm-desktops/WindowMaker.desktop.in.in
 capplets/wm-properties/wm-desktops/twm.desktop.in.in
+control-center/control-center-categories.c
+control-center/control-center.c
+control-center/gnomecc.desktop.in
+control-center/gnomecc.desktop.in.in
+control-center/gnomecc-event-box.c
 gnome-settings-daemon/GNOME_SettingsDaemon.server.in
 root-manager/root-manager-helper.c
 root-manager/root-manager-wrap.c
 root-manager/root-manager.c
-control-center/gnomecc-event-box.c
 schemas/desktop_gnome_font_rendering.schemas.in
+shell/gnomecc.desktop.in
+vfs-methods/fontilus/gnome-font-viewer.desktop.in
+vfs-methods/themus/themus-theme-applier.desktop.in
+
