@@ -1,3 +1,9 @@
+2006-12-28  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* POTFILES.in: Add missing files
+	* POTFILES.skip: Add missing files
+	* nb.po: Updated Norwegian bokmål translation.
+
 2006-12-25  Jovan Naumovski  <jovan@lugola.net>
 
 	* mk.po: Updated Macedonian translation.
